Changelog
=========

1.1.0 (Unreleased)
------------------

* migration to Plone 4.1

1.0.9 (and before)
------------------

* a lot of italian-only changes


