@@ -1,41 +1,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
       lang="en"
       metal:use-macro="here/main_template/macros/master"
-      i18n:domain="cciaa.topic_view">
+      i18n:domain="plone">
 
 <body>
 
-<div metal:fill-slot="main">
-<metal:main_macro define-macro="main">
+<metal:content-core fill-slot="content-core">
+  <metal:block define-macro="content-core">
     <metal:body define-macro="body_macro"
-                tal:define="templateId template/getId;">
-
-
-        <div tal:replace="structure provider:plone.abovecontenttitle" />
-
-        <h1 class="documentFirstHeading"> 
-            <metal:field use-macro="python:here.widget('title', mode='view')">
-            Title
-            </metal:field>
-        </h1>
-
-        <div tal:replace="structure provider:plone.belowcontenttitle" />
-
-        <p class="documentDescription">
-            <metal:field use-macro="python:here.widget('description', mode='view')">
-            Description
-            </metal:field>
-        </p>
-
-        <div tal:replace="structure provider:plone.abovecontentbody" />
+                tal:define="kssClassesView context/@@kss_field_decorator_view;
+                            getKssClasses nocall:kssClassesView/getKssClassesInlineEditable;
+                            templateId template/getId">
 
         <metal:listingmacro define-macro="listing">
-        <tal:topiccontents define="topicContents python:context.queryCatalog(batch=True);
+        <tal:topiccontents define="topicContents python:here.queryCatalog(batch=True);
+                                   use_view_action site_properties/typesUseViewActionInListings|python:();
                                    batch topicContents;">
 
         <tal:listing condition="topicContents">
-            <a style="text-align: right" href="#"
-               tal:condition="nocall: context/asPDF|nothing"
+            <a style='text-align: right' href="#"
+               tal:condition="nocall: here/asPDF|nothing"
                tal:attributes="href string:${here_url}/asPDF/atct_topic_pdf_template/atct_topic_pdf"
                i18n:translate="label_download_as_pdf"
                i18n:domain="atcontenttypes">
@@ -44,75 +28,138 @@
         </tal:listing>
 
         <tal:listing condition="topicContents">
-        <div>
-		    <table class="cciaa_topic_view">
-                        <tbody>
-                	<tal:block tal:repeat="item topicContents">
-                    	<tr>
-                            <td class="center" tal:define="item_object item/getObject">
-                                <tal:hasImage condition="exists:item_object/image_thumb">
-                                    <img src="" alt="" tal:replace="structure python: path('nocall:item_object/tag')(scale='thumb', css_class='tImage')" />
-                                </tal:hasImage>
-                                <tal:noImage condition="not:exists:item_object/image_thumb">
-                                    <img tal:attributes="src string:${context/portal_url}/++resource++cciaa.topic_view.images/news.png" alt="Logo novità" title="Novità"/>
-                                </tal:noImage>
-                       	    </td>
-                            <td>
-                        		<a href="" tal:attributes="href item/getURL">
-                            		<span class="title_item" tal:content="item/Title"/>
-                           	 	</a>
-                            		<div tal:content="item/Description">
-                               			Elemento
-                                    </div>
-                            </td>
-                 		</tr>
-             		</tal:block>
-          		</tbody>
-		  	</table>
-		</div>
-        </tal:listing>
-        <p class="discreet"
-           tal:condition="python: not topicContents and here.listCriteria()"
-           i18n:domain="atcontenttypes"
-           i18n:translate="description_no_items_in_topic">
-            There are currently no results for this search.
-        </p>
+            <tal:default condition="not:here/getCustomView|nothing"
+                         define="folderContents topicContents">
+              <table class="cciaa_topic_view">
+                <tbody>
+                  <tal:block tal:repeat="item topicContents">
+                    <tr>
+                      <td class="center" tal:define="item_object item/getObject">
+                        <tal:hasImage condition="exists:item_object/image_thumb">
+                          <img src="" alt="" tal:replace="structure python: path('nocall:item_object/tag')(scale='thumb', css_class='tImage')" />
+                        </tal:hasImage>
+                          <tal:noImage condition="not:exists:item_object/image_thumb">
+                            <img tal:attributes="src string:${context/portal_url}/++resource++cciaa.topic_view.images/news.png" alt="Logo novitÃ " title="NovitÃ "/>
+                        </tal:noImage>
+                      </td>
+                      <td>
+                        <a href="" tal:attributes="href item/getURL">
+                          <span class="title_item" tal:content="item/Title"/>
+                        </a>
+                        <div tal:content="item/Description">
+                          Elemento
+                        </div>
+                      </td>
+                    </tr>
+                  </tal:block>
+                </tbody>
+              </table>
+              <div metal:use-macro="context/batch_macros/macros/navigation" />
+            </tal:default>
 
-        <p class="discreet"
-           tal:condition="not: here/listCriteria"
-           i18n:domain="atcontenttypes"
-           i18n:translate="description_no_criteria_in_topic">
-            There are currently no criteria on which to search.
-            Please add them using the 'criteria' tab.
-        </p>
-        <div tal:condition="here/getText">
-		<span tal:replace="structure here/getText">
-            Text
-        </span>
-        </div>
-            <!-- Navigation -->
-            <div metal:use-macro="here/batch_macros/macros/navigation" />
+            <tal:custom condition="here/getCustomView|nothing"
+                        define="vocab python:here.listMetaDataFields(False)">
+
+                <table class="listing"
+                       summary="Content listing"
+                       i18n:attributes="summary summary_content_listing;">
+                     <thead>
+                        <tr>
+                            <th tal:repeat="field here/getCustomViewFields"
+                                tal:content="python:vocab.getValue(field, field)"
+                                i18n:translate=""/>
+                        </tr>
+                     </thead>
+                     <tbody>
+                        <tal:brain tal:repeat="obj topicContents">
+                        <tr tal:define="oddrow repeat/obj/odd;"
+                            tal:attributes="class python:test(oddrow, 'even', 'odd')">
+                            <tal:fields repeat="field here/getCustomViewFields"
+                                        define="normalizeString nocall:context/@@plone/normalizeString;
+                                                url obj/getURL;
+                                                obj_type obj/portal_type;
+                                                obj_description obj/Description;
+                                                obj_typeinfo python: here.portal_types.getTypeInfo(obj_type);
+                                                obj_icon python:plone_view.getIcon(obj);
+                                                obj_wf_state obj/review_state|python: wtool.getInfoFor(obj, 'review_state', '');
+                                                obj_wf_state_class python:'state-' + normalizeString(obj_wf_state);
+                                                obj_ct_class python:'contenttype-' + normalizeString(obj_type);
+                                                obj_url python:test(obj_type in use_view_action, url+'/view', url);
+                                                title_or_id obj/pretty_title_or_id">
+                            <tal:block define="value python: getattr(obj, field, None)">
+                                <td tal:condition="python: field != 'Title'"
+                                    tal:content="python:here.formatCatalogMetadata(value)"
+                                    i18n:translate=""/>
+                                <td tal:condition="python: field == 'Title'">
+                                    <a href="#" tal:attributes="href obj_url;
+                                                                title obj_description;">
+                                        <img tal:replace="structure obj_icon/html_tag|nothing" />
+                                    </a>
+                                    <a href="#"
+                                       tal:condition="python: obj.portal_type != 'Link'"
+                                       tal:attributes="href obj_url;
+                                                       class string:${obj_wf_state_class} ${obj_ct_class};
+                                                       title obj_description;"
+                                       tal:content="title_or_id">
+                                        Item Title
+                                    </a>
+
+                                    <a href="#"
+                                       tal:condition="python: obj.portal_type == 'Link'"
+                                       tal:attributes="href obj/getRemoteUrl;
+                                                       class string:${obj_wf_state_class} ${obj_ct_class} link-plain;
+                                                       title obj_description;"
+                                       class="link-plain"
+                                       tal:content="title_or_id" />
+
+                                </td>
+                            </tal:block>
+                            </tal:fields>
+                        </tr>
+                        </tal:brain>
+                     </tbody>
+                </table>
+            </tal:custom>
+
+            </tal:listing>
+
+            <p class="discreet"
+               tal:condition="python: not topicContents and here.listCriteria()"
+               i18n:domain="atcontenttypes"
+               i18n:translate="description_no_items_in_topic">
+                There are currently no results for this search.
+            </p>
+
+            <p class="discreet"
+               tal:condition="not: here/listCriteria"
+               i18n:domain="atcontenttypes"
+               i18n:translate="description_no_criteria_in_topic">
+                There are currently no criteria on which to search.
+                Please add them using the 'criteria' tab.
+            </p>
 
         </tal:topiccontents>
         </metal:listingmacro>
+        <div tal:condition="here/getText">
+          <span tal:replace="structure here/getText">
+              Text
+          </span>
+        </div>
     </metal:body>
 
     <metal:body define-macro="folderlisting_macro">
         <tal:subtopics condition="here/hasSubtopics|nothing"
-                       define="folderContents here/getFolderContents">
+                       define="folderContents here/listSubtopics|nothing">
             <h2 i18n:domain="atcontenttypes"
-                i18n:translate="heading_contained_collections">
+                i18n:translate="heading_contained_collections"
+                id="atct_subtopics_header">
                 Also in this section
             </h2>
             <metal:list metal:use-macro="here/base/macros/folderlisting"/>
         </tal:subtopics>
     </metal:body>
-
-    <div tal:replace="structure provider:plone.belowcontentbody" />
-
-</metal:main_macro>
-
-</div>
+  </metal:block>
+</metal:content-core>
 
 </body>
 </html>
